Fix spacing issues on settings pane

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,8 @@ th {
 }
 
 .checkbox-center {
-    margin-left: 15px;
+    margin-top: 4px;
+    margin-left: 13px;
 }
 
 #view-details {
